WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291237
Web Inspector uses system highlight color, which becomes misleading when that's grey
https://bugs.webkit.org/show_bug.cgi?id=291237
Summary
Web Inspector uses system highlight color, which becomes misleading when that...
Alexey Proskuryakov
Reported
2025-04-07 16:13:39 PDT
Web inspector uses black icons for disabled state, and system highlight for enabled (e.g. the button for pretty printing sources). This usually works well, but it conveys the opposite idea when one's system highlight color is grey.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-07 16:13:49 PDT
<
rdar://problem/148779029
>
Anuj Panta
Comment 2
2025-11-30 13:57:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54598
EWS
Comment 3
2026-02-20 14:18:24 PST
Committed
307943@main
(e4ac810c5e5f): <
https://commits.webkit.org/307943@main
> Reviewed commits have been landed. Closing PR #54598 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug